logs/mrsd_ros_tutorials/build.make.271.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In member function ‘bool ImageConverter::transformCB(mrsd_ros_tutorials::SaveData::Request&, mrsd_ros_tutorials::SaveData::Response&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:147:9: error: continue statement not within a loop
         continue;
         ^
make[2]: *** [CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/subscribe_pc_node.dir/all] Error 2
make: *** [all] Error 2
